# tyr

./: .gitignore  pyproject.toml  requirements.txt
Tutorials/: 1.1 - Schema & Lineage Objects.ipynb  1.2 - Database Tools.ipynb  1.3 - Custom Lineage Objects.ipynb  run_all.py
Tutorials/.ipynb_checkpoints/: 1.1 - Schema & Lineage Objects-checkpoint.ipynb  1.3 - Custom Lineage Objects-checkpoint.ipynb  1.4 - Project Schema-checkpoint.ipynb
docs/source/: conf.py  index.rst
docs/source/lineage/: columns.rst  core.rst  functions.rst  joins.rst  values.rst
src/: docs.py
src/beehive/: __init__.py  interpreter.py
src/beehive.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/beehive/beeswax/: __init__.py  interpreter.py
src/beehive/database/: __init__.py  connections.py  core.py
src/beehive_duckdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tyr/: __init__.py  interpreter.py  network.py
src/tyr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: init_configuration.py  test_lineage.py  test_macros_tables.py  test_network.py
tests/configurations/: column_metadata.tsv  file_metadata.tsv
tests/datasets/: f1_circuits.geojson  intervals_session_9165.tsv  laps_session_9165.tsv  meetings.tsv  pit_session_9165.tsv  position_session_9165.tsv  race_control_session_9165.tsv  results_session_9165.tsv  session_status_session_9165.tsv  sessions.tsv  stints_session_9165.tsv  team_radio_session_9165.tsv  test_column_metadata.tsv  test_file_metadata.tsv  track_status_session_9165.tsv  weather_session_9165.tsv
tests/saved_schema/: source.pkl  staging.pkl
(+145 files in other folders)
