[project]
name = "beehive_duckdb"
version = "0.0.1"
authors = [
  { name="Miles Bartnik", email="miles.bartnik@gmail.com" },
]
description = "Lineage and management tools for duckdb"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"